--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@11ty/eleventy": "^1.0.1",
-    "@11ty/eleventy-plugin-rss": "^1.1.2",
-    "clean-css": "^5.3.0",
-    "luxon": "^2.4.0",
-    "markdown-it": "^13.0.1",
-    "markdown-it-anchor": "^8.6.4",
+    "@11ty/eleventy": "^3.1.2",
+    "@11ty/eleventy-plugin-rss": "^2.0.4",
+    "clean-css": "^5.3.3",
+    "luxon": "^3.6.1",
+    "markdown-it": "^14.1.0",
+    "markdown-it-anchor": "^9.2.0",
+    "npm-check-updates": "^18.0.1",
     "npm-run-all": "^4.1.5",
-    "sass": "^1.52.1",
-    "terser": "^5.13.1"
+    "sass": "^1.89.2",
+    "terser": "^5.43.1"
   }
 }
